fixing firefox scrollbars

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -5,7 +5,9 @@
     font-family: 'Raleway', sans-serif;
 }
 
-
+html {
+    overflow: -moz-scrollbars-none;
+}
 
 body{
     width:100vw;
